# keycli

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: ci.yml  create_release_assets.yml
src/: cli.rs  commands.rs  completion.rs  config.rs  consts.rs  main.rs  secrets.rs
tests/: outputs.rs
tests/cmd/: help.toml
