[package]
name = "keycli"
version = "0.1.0"
edition = "2024"
description = "An environment manager which stores your secrets in your OS keyring"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive", "env"] }
clap_complete_command = "0.6.1"
colored = "3.1.1"
dialoguer = "0.12.0"
env_logger = "0.11.9"
heck = "0.5.0"
hex = "0.4.3"
log = "0.4.29"
regex = "1.12.3"
sha2 = "0.10.9"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[dev-dependencies]
trycmd = "1.2.0"
